// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Object Field Template renders a default TitleField and DescriptionField 1`] = `
<div>
  <div
    class="sc-jRQBWg cDwDrH pg-grid-container"
    cols="10"
  >
    <div
      class="sc-gKclnd sc-iCfMLu YZhSi fQKovI pg-grid-row"
    >
      <div
        class="sc-furwcr sc-pVTFL XpgcI eqAbko pg-grid-col"
        id="test"
        width="100"
      >
        <fieldset
          class="jsx-3717620960"
        >
          <legend
            class="jsx-3717620960"
          >
            Test Title
          </legend>
          <span
            id="test-id__description"
          >
            Test Description
          </span>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Object Field Template renders the provided TitleField and DescriptionField with the provided title and description 1`] = `
<div>
  <div
    class="sc-jRQBWg cDwDrH pg-grid-container"
    cols="10"
  >
    <div
      class="sc-gKclnd sc-iCfMLu YZhSi fQKovI pg-grid-row"
    >
      <div
        class="sc-furwcr sc-pVTFL XpgcI eqAbko pg-grid-col"
        id="test"
        width="100"
      >
        <fieldset
          class="jsx-3717620960"
        >
          <legend
            class="jsx-3717620960"
          >
            Second title
          </legend>
          <p>
            Test 
            Another Description
          </p>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
